--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_otp_text_field: ^1.1.0+2
+  fluttertoast: ^8.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -84,7 +85,7 @@ flutter:
     # "family" key with the font family name, and a "fonts" key with a
     # list giving the asset and other descriptors for the font. For
     # example:
-#    fonts:
+  #    fonts:
   #      - family: Poppins
   #        fonts:
   #          - asset: assets/fonts/Poppins-Black.ttf
