--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   flutter_otp_text_field: ^1.1.0+2
   fluttertoast: ^8.2.2
+  flutter_bloc: ^8.0.0
+  bloc: ^8.0.0
+  meta:
+  equatable: ^2.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
